--- a/resources/src/main/res/values-hi/strings.xml
+++ b/resources/src/main/res/values-hi/strings.xml
@@ -314,7 +314,7 @@
   <string name="msg_swipe_for_output">\@@बिल्ड आउटपुट@@ के लिए ऊपर स्वाइप करें।</string>
   <string name="idepref_editor_useSoftTabs_title">सॉफ्ट टैब का उपयोग करें</string>
   <string name="idepref_editor_useSoftTabs_summary">चुनें कि टैब वर्ण (\\t) के बजाय रिक्त स्थान का उपयोग करना है या नहीं।</string>
-  <string name="btn_sponsor">प्रायोजक बनें</string>
+  <string name="btn_donate">प्रायोजक बनें</string>
   <string name="btn_docs">प्रलेखन</string>
   <string name="btn_close">बंद करे</string>
   <string name="msg_ignore_case">अक्षरों के केस को नजरअंदाज करें</string>
