--- a/resources/src/main/res/values-bn/strings.xml
+++ b/resources/src/main/res/values-bn/strings.xml
@@ -314,7 +314,7 @@
   <string name="msg_swipe_for_output">\@@বিল্ড আউটপুট@@ এর জন্য উপরে সোয়াইপ করুন।</string>
   <string name="idepref_editor_useSoftTabs_title">সফ্ট ট্যাব ব্যবহার করুন</string>
   <string name="idepref_editor_useSoftTabs_summary">ট্যাব অক্ষরের (\\t) পরিবর্তে স্পেস ব্যবহার করবেন কিনা তা বেছে নিন।</string>
-  <string name="btn_sponsor">স্পন্সর</string>
+  <string name="btn_donate">স্পন্সর</string>
   <string name="btn_docs">ডকুমেন্টেশন</string>
   <string name="btn_close">বন্ধ করুন</string>
   <string name="msg_ignore_case">Case উপেক্ষা করুন</string>
