feat: implement logic for creating template projects

--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -135,6 +135,7 @@
   <string name="asset_copy_failed">Failed to copy template to storage!</string>
   <string name="cannot_create_temp">Failed to create temporary project directory!</string>
   <string name="project_created_successfully">Project created successfully!</string>
+  <string name="project_creation_failed">Failed to create project</string>
   <string name="msg_begin_project_write">Starting writing process</string>
   <string name="msg_folder_creation_failed">Failed to create folder!</string>
   <string name="msg_file_creation_failed">Failed to create file!</string>
@@ -561,4 +562,5 @@
   <string name="msg_classname_with_keywords">Class name contains keywords</string>
   <string name="msg_path_must_be_dir">Must be path to a directory</string>
   <string name="msg_invalid_layout_name">Invalid layout file name</string>
+  <string name="msg_invalid_project_details">Invalid project details</string>
 </resources>
