--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -568,6 +568,7 @@
   <string name="msg_use_kts">Use Kotlin Script (.kts) for Gradle build files</string>
   <string name="title_privacy">Privacy</string>
   <string name="title_androidide_statistics">AndroidIDE Statistics</string>
+  <string name="msg_androidide_statistics">Help us improve AndroidIDE by providing anonymous statistics. We collect basic information about your device for user base statistics only. The exact data that is shared can be viewed in preferences. Your data is secure and not shared with third-party services. You can opt-out anytime in preferences.</string>
   <string name="summary_anonymous_usage_stats">Anonymous usage stats</string>
   <string name="idepref_stats_optIn_title">Stats collection</string>
   <string name="idepref_stats_optIn_summary">Allow installation metrics and device statistics to be collected (fully anonymous).</string>
@@ -578,4 +579,6 @@
   <string name="title_cpu_arch">CPU Arch</string>
   <string name="title_preview_data">Preview data</string>
   <string name="title_android_veresion">Android veresion</string>
+  <string name="btn_opt_in">Opt-in</string>
+  <string name="btn_no_thanks">No, thanks</string>
 </resources>
