fix: update translations (#1097)

--- a/resources/src/main/res/values-de/strings.xml
+++ b/resources/src/main/res/values-de/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
+  <string name="copy" tools:override="true">Copy</string>
+  <string name="text_to_search">Text to search</string>
   <string name="title_open_source_licenses">Open-Source-Lizenzen</string>
   <string name="msg_about_licensed_under">Lizenziert unter:</string>
   <string name="about_option_email">E-Mail</string>
@@ -70,7 +72,7 @@
   <string name="project_app_name">App Name</string>
   <string name="msg_create_new_project_greeting">Starten Sie Ihr neues gro&#xDF;artiges Projekt!</string>
   <string name="title_confirm_open_project">Letztes Projekt &#xF6;ffnen?</string>
-  <string name="msg_confirm_open_project">Do you want to open last opened project? Opened project was:\n%s</string>
+  <string name="msg_confirm_open_project">Möchten Sie das zuletzt geöffnete Projekt öffnen? Das geöffnete Projekt war:\n%s</string>
   <string name="group_project">Projekt</string>
   <string name="title_close_project">Dieses Projekt schlie&#xDF;en</string>
   <string name="msg_opened_project_does_not_exist">Zuletzt ge&#xF6;ffnetes Projekt existiert nicht!</string>
@@ -120,16 +122,16 @@
   <string name="asset_copy_failed">Vorlage konnte nicht in den Speicher kopiert werden!</string>
   <string name="cannot_create_temp">Fehler beim Erstellen des tempor&#xE4;ren Projektverzeichnisses!</string>
   <string name="project_created_successfully">Projekt erfolgreich erstellt!</string>
-  <string name="project_creation_failed">Failed to create project</string>
+  <string name="project_creation_failed">Das Projekt konnte nicht erstellt werden</string>
   <string name="msg_begin_project_write">Schreibprozess starten</string>
   <string name="msg_folder_creation_failed">Ordner konnte nicht erstellt werden!</string>
   <string name="msg_file_creation_failed">Erstellen der Datei fehlgeschlagen!</string>
-  <string name="msg_layout_file_creation_failed">Failed to create layout file!</string>
+  <string name="msg_layout_file_creation_failed">Es konnte keine Layout-Datei erstellt werden!</string>
   <string name="msg_folder_created">Ordner erfolgreich erstellt!</string>
   <string name="msg_file_created">Datei erfolgreich erstellt!</string>
   <string name="msg_folder_exists">Ordner existiert bereits!</string>
   <string name="msg_file_exists">Die Datei existiert bereits!</string>
-  <string name="msg_layout_file_exists">Layout file already exists!</string>
+  <string name="msg_layout_file_exists">Layout-Datei existiert bereits!</string>
   <string name="msg_invalid_name">Ung&#xFC;ltiger Name!</string>
   <string name="text_create">Erstellen</string>
   <string name="msg_can_contain_slashes">Wenn der Pfad Dateitrennzeichen (\'/\') enth&#xE4;lt, werden die erforderlichen (&#xFC;bergeordneten) Verzeichnisse erstellt, falls sie nicht vorhanden sind.</string>
@@ -137,7 +139,7 @@
   <string name="file_name">Dateinamen</string>
   <string name="new_name">Neuer Name</string>
   <string name="new_file">Neue Datei</string>
-  <string name="create_auto_layout">Create layout file</string>
+  <string name="create_auto_layout">Erstelle eine Layout-Datei</string>
   <string name="new_java_class">Neue Java-Klasse</string>
   <string name="new_xml_resource">Neue XML-Ressource</string>
   <string name="new_folder">Neuer Ordner</string>
@@ -157,7 +159,7 @@
   <string name="action_closeOthers">Andere schlie&#xDF;en</string>
   <string name="action_closeThis">Diese Datei schlie&#xDF;en</string>
   <string name="all_saved">Alle Dateien gespeichert!</string>
-  <string name="save_failed">Failed to save files</string>
+  <string name="save_failed">Die Dateien konnten nicht gespeichert werden</string>
   <string name="msg_newfile_dest">Ziel: %s/</string>
   <string name="restype_drawable">Drawable</string>
   <string name="restype_layout">Layout</string>
@@ -208,7 +210,7 @@
   <string name="msg_preferences">Einstellungen</string>
   <string name="pref_changelog">&#xC4;nderungsprotokoll</string>
   <string name="msg_editor_font_size">Bitte w&#xE4;hlen Sie die Standardschriftgr&#xF6;&#xDF;e des Editors aus:</string>
-  <string name="msg_clear_cache">This will delete caches directory created by Gradle. If you delete it, the next build may take a bit longer than normal as Gradle will download required files again.\n\nAre you sure you want to delete caches?</string>
+  <string name="msg_clear_cache">Dies löscht das Cache-Verzeichnis, das von Gradle erstellt wurde. Wenn Sie es löschen, kann der nächste Build etwas länger dauern, als gewöhnlich, da Gradle die benötigten Dateien erneut herunterlädt.\n\nSind Sie sicher, dass Sie die Caches löschen möchten?</string>
   <!-- Error Messages used while Logging -->
   <string name="err_init_sdkinfo">SDK Info kann nicht initialisiert werden</string>
   <string name="err_cannot_preview_layout">Vorschau des Layouts nicht m&#xF6;glich</string>
@@ -274,7 +276,7 @@
   <string name="idepref_java_useGoogleStyle_summary">Verwenden Sie die Codeformatierungskonfiguration im Google-Java-Stil zum Formatieren des Java-Quellcodes.</string>
   <string name="idepref_visiblePassword_title">Sichtbares Passwort-Flag</string>
   <string name="idepref_visiblePassword_summary">Für sichtbares Passworteingabetyp-Flag im Editor verwenden. Dadurch wird sichergestellt, dass keine Vorschläge per Softkeyboard gemacht werden.</string>
-  <string name="previous">Vorherige</string>
+  <string name="previous">Zurück</string>
   <string name="msg_replacing">Ersetzen…</string>
   <string name="title_gradle_service_notification_ticker">Gradle build service gestartet</string>
   <string name="title_gradle_service_notification">Gradle build service</string>
@@ -320,7 +322,7 @@
   <string name="msg_swipe_for_output">Swipe nach oben für @@build output@@.</string>
   <string name="idepref_editor_useSoftTabs_title">Soft tab benutzen</string>
   <string name="idepref_editor_useSoftTabs_summary">Wählen Sie, ob Leerzeichen anstelle von Tab verwendet werden sollen (\\t).</string>
-  <string name="btn_donate">Donate</string>
+  <string name="btn_donate">Unterstützen</string>
   <string name="btn_docs">Dokumentation</string>
   <string name="btn_close">Schließen</string>
   <string name="msg_ignore_case">Groß-/Kleinschreibung ignorieren</string>
@@ -335,14 +337,14 @@
   <string name="idepref_about_summary">Mehr über AndroidIDE.</string>
   <string name="idepref_general_summary">Allgemeine IDE-Konfiguration.</string>
   <string name="idepref_editor_summary">Konfiguriere den Editor.</string>
-  <string name="idepref_xml_trimFinalNewLine_title">Trim final new line</string>
-  <string name="idepref_xml_insertFinalNewLine_title">Insert final new line</string>
+  <string name="idepref_xml_trimFinalNewLine_title">Letzte Zeile löschen</string>
+  <string name="idepref_xml_insertFinalNewLine_title">Eine neue letzte Zeile einfügen</string>
   <string name="idepref_xml_trimFinalNewLine_summary">Entferne zusätzliche Leerzeichen am Ende der Zeilen</string>
-  <string name="idepref_xml_insertFinalNewLine_summary">Inserts an empty new line at the end of file.</string>
+  <string name="idepref_xml_insertFinalNewLine_summary">Fügt eine leere neue Zeile am Ende der Datei ein.</string>
   <string name="idepref_xml_splitAttributes_title">Split attributes</string>
   <string name="idepref_xml_splitAttributes_summary">Attribute in neuer Zeile formatieren</string>
   <string name="idepref_xml_joinCDataLines_title">Join CDATA lines</string>
-  <string name="idepref_xml_joinCDataLines_summary">Normalize content inside CDATA.</string>
+  <string name="idepref_xml_joinCDataLines_summary">Inhalt innerhalb von CDATA normalisieren.</string>
   <string name="idepref_xml_joinComment_title">Join comment lines</string>
   <string name="idepref_xml_joinComment_summary">Normalize content inside comments.</string>
   <string name="idepref_xml_joinContent_title">Join content lines</string>
@@ -359,13 +361,13 @@
   <string name="idepref_xml_trimTrailingWs_summary">Entferne zusätzliche Leerzeichen am Ende der Zeilen.</string>
   <string name="idepref_editor_formatterOptions">Formatierungsoptionen</string>
   <string name="idepref_maxLineWidth_title">Max. Linienbreite</string>
-  <string name="idepref_maxLineWidth_summary">The maximum number of characters a line should have.</string>
+  <string name="idepref_maxLineWidth_summary">Die maximale Anzahl an Zeichen die eine Zeile haben soll.</string>
   <string name="idepref_splitAttrIndentSize_title">Split attributes indent size</string>
   <string name="idepref_splitAttrIndentSize_summary">The number of spaces to indent for split attributes.</string>
   <string name="idepref_preservedNewLines_title">Neue Zeilen beibehalten</string>
   <string name="idepref_preservedNewLines_summary">Die maximale Anzahl an kontinuierlichen Zeilenumbrüchen, die erhalten bleiben sollten.</string>
   <string name="idepref_emptyElements_title">Empty elements behaviour</string>
-  <string name="idepref_emptyElements_summary">Choose the formatting behavior for empty elements.</string>
+  <string name="idepref_emptyElements_summary">Wähl das Formatierungsverhalten für leere Elemente aus.</string>
   <string name="xml_formatting_options">XML-Formatierungsoptionen</string>
   <string name="xml_formatting_options_summary">XML-Formatierer konfigurieren</string>
   <string name="idepref_customFont_title">Eigene Schriftart verwenden</string>
@@ -406,7 +408,7 @@
   <string name="msg_no_fields_selected">Es wurde kein Feld ausgewählt.</string>
   <string name="msg_no_fields_found">Keine Feld gefunden</string>
   <string name="action_override_superclass_methods">Überschreibe Superclass Methoden</string>
-  <string name="msg_no_methods_selected">No methods selected</string>
+  <string name="msg_no_methods_selected">Keine Methoden ausgewählt</string>
   <string name="msg_cannot_override_methods">Methoden können nicht überschrieben werden</string>
   <string name="msg_cannot_generate_setters_getters">Setter und Getter konnten nicht generiert werden</string>
   <string name="msg_select_methods">Methoden zum Überschreiben auswählen</string>
@@ -451,55 +453,55 @@
   <string name="uiMode_light">Hell</string>
   <string name="uiMode_dark">Dunkel</string>
   <string name="uiMode_system">Vom System übernehmen</string>
-  <string name="idepref_general_materialYou_summary">Enjoy an experience closer to your device (requires restart).</string>
+  <string name="idepref_general_materialYou_summary">Genießen Sie ein Erlebnis das näher an Ihrem Gerät angepasst ist (Neustart erforderlich).</string>
   <string name="idepref_general_projectConfig">Projektkonfiguration</string>
   <string name="msg_app_launch_failed">Fehler beim Starten der Anwendung. Siehe IDE-Logs für weitere Informationen.</string>
-  <string name="idepref_java_diagnosticEnabled_title">Diagnostics enabled</string>
-  <string name="idepref_java_diagnosticsEnabled_summary">(EXPERIMENTAL) Whether the Java source files should be analyzed for errors or not.</string>
-  <string name="title_reload_color_schemes">Reload color schemes</string>
-  <string name="msg_dir_picker_failed">Failed to start directory picker : %1$s</string>
-  <string name="msg_tooling_server_unavailable">Tooling API server is unavailable. Check build output and IDE logs for errors.</string>
-  <string name="idepref_deleteEmptyLines_title">Delete empty lines on backspace</string>
+  <string name="idepref_java_diagnosticEnabled_title">Diagnostik aktiviert</string>
+  <string name="idepref_java_diagnosticsEnabled_summary">(EXPERIMENTELL) Sollen die Java-Quellcodedateien auf Fehler analysiert werden oder nicht.</string>
+  <string name="title_reload_color_schemes">Farbschemen neu laden</string>
+  <string name="msg_dir_picker_failed">Fehler beim Starten der Verzeichnisauswahl : %1$s</string>
+  <string name="msg_tooling_server_unavailable">Tooling API Server ist nicht verfügbar. Überprüfen Sie die Build-Ausgabe und IDE-Logs auf Fehler.</string>
+  <string name="idepref_deleteEmptyLines_title">Leere Zeilen löschen, wenn Backspace gedrückt wird</string>
   <string name="idepref_deleteEmptyLines_summary">Whether the editor should delete empty lines on a single backspace key event.</string>
   <string name="idepref_deleteTabs_title">Delete tab on backspace</string>
-  <string name="idepref_deleteTabs_summary">When enabled, the editor will delete spaces equal to the tab width when the backspace key is pressed.</string>
-  <string name="btn_sync">Sync</string>
-  <string name="btn_ignore_changes">Ignore these changes</string>
-  <string name="title_fix_imports">Fix imports</string>
-  <string name="msg_no_unresolved_classes">No unresolved class names found</string>
+  <string name="idepref_deleteTabs_summary">Wenn aktiviert, löscht der Editor Leerzeichen, die der Tab-Breite entsprechen, wenn die Backspace-Taste gedrückt wird.</string>
+  <string name="btn_sync">Synchronisieren</string>
+  <string name="btn_ignore_changes">Änderungen verwerfen</string>
+  <string name="title_fix_imports">Importe korrigieren</string>
+  <string name="msg_no_unresolved_classes">Keine ungelösten Klassennamen gefunden</string>
   <string name="title_class_chooser">Which %1$s?</string>
   <string name="permlab_bind_logger_service">bind to log service</string>
-  <string name="permdesc_bind_logger_service">Allows this application to bind to AndroidIDE\'s logging service. This permission is required for AndroidIDE to read logs of this application.</string>
-  <string name="wizard_module_name">Module name</string>
-  <string name="wizard_module_type">Module type</string>
-  <string name="msg_invalid_module_name">Invalid Gradle module name</string>
-  <string name="msg_invalid_class_name">Invalid class name</string>
-  <string name="msg_value_empty">Value is empty</string>
-  <string name="msg_file_not_exist">File does not exist</string>
+  <string name="permdesc_bind_logger_service">Erlaubt dieser Anwendung, sich an den Protokollierungsdienst von AndroidIDE anzubinden. Diese Berechtigung ist erforderlich, damit AndroidIDE die Protokolle der Anwendung lesen kann.</string>
+  <string name="wizard_module_name">Modulname</string>
+  <string name="wizard_module_type">Modul-Typ</string>
+  <string name="msg_invalid_module_name">Ungültiger Gradle-Modulname</string>
+  <string name="msg_invalid_class_name">Ungültiger Klassenname: \"%s\"</string>
+  <string name="msg_value_empty">Der Wert ist leer</string>
+  <string name="msg_file_not_exist">Die Datei existiert nicht</string>
   <string name="msg_path_must_be_file">Must be path to a file</string>
-  <string name="msg_classname_with_keywords">Class name contains keywords</string>
-  <string name="msg_path_must_be_dir">Must be path to a directory</string>
-  <string name="msg_invalid_layout_name">Invalid layout file name</string>
-  <string name="msg_invalid_project_details">Invalid project details</string>
-  <string name="msg_use_kts">Use Kotlin Script (.kts) for Gradle build files</string>
-  <string name="title_privacy">Privacy</string>
-  <string name="title_androidide_statistics">AndroidIDE Statistics</string>
-  <string name="msg_androidide_statistics">Help us improve AndroidIDE by providing anonymous statistics. We collect basic information about your device for user base statistics only. The exact data that is shared can be viewed in preferences. Your data is secure and not shared with third-party services. You can opt-out anytime in preferences.</string>
-  <string name="summary_anonymous_usage_stats">Anonymous usage stats</string>
+  <string name="msg_classname_with_keywords">Klassenname enthält Keywords</string>
+  <string name="msg_path_must_be_dir">Muss ein Pfad zu einem Ordner sein</string>
+  <string name="msg_invalid_layout_name">Ungültiger Layout-Dateiname</string>
+  <string name="msg_invalid_project_details">Ungültige Projekt-Details</string>
+  <string name="msg_use_kts">Kotlin Script (.kts) für Gradle Build-Dateien verwenden</string>
+  <string name="title_privacy">Datenschutz</string>
+  <string name="title_androidide_statistics">AndroidIDE Statistiken</string>
+  <string name="msg_androidide_statistics">Helfen Sie uns AndroidIDE zu verbessern, indem Sie anonyme Statistiken erlauben. Wir sammeln grundlegende Informationen über Ihr Gerät nur für Benutzer-Basisstatistiken. Die exakten Daten, die geteilt werden, können in den Einstellungen eingesehen werden. Ihre Daten sind sicher und werden nicht an Dritte weitergegeben. Sie können jederzeit in den Einstellungen widersprechen.</string>
+  <string name="summary_anonymous_usage_stats">Anonyme Nutzungsdaten</string>
   <string name="idepref_stats_optIn_title">Stats collection</string>
-  <string name="idepref_stats_optIn_summary">Allow installation metrics and device statistics to be collected (fully anonymous).</string>
-  <string name="title_unique_id">Unique ID</string>
-  <string name="title_device">Device</string>
-  <string name="title_app_version">App version</string>
-  <string name="title_country">Country</string>
-  <string name="title_cpu_arch">CPU Arch</string>
+  <string name="idepref_stats_optIn_summary">Sammeln von Installations- und Gerätestatistiken erlauben (vollständig anonymisiert).</string>
+  <string name="title_unique_id">Einzigartige ID</string>
+  <string name="title_device">Gerät</string>
+  <string name="title_app_version">App-Version</string>
+  <string name="title_country">Land</string>
+  <string name="title_cpu_arch">Prozessor-Architektur</string>
   <string name="title_preview_data">Preview data</string>
   <string name="title_android_version">Android version</string>
-  <string name="btn_opt_in">Opt-in</string>
-  <string name="btn_no_thanks">No, thanks</string>
-  <string name="title_developer_options">Developer options</string>
-  <string name="idepref_devOptions_summary">Experimental/debugging options for AndroidIDE</string>
+  <string name="btn_opt_in">Einwilligen</string>
+  <string name="btn_no_thanks">Nein, danke</string>
+  <string name="title_developer_options">Entwickleroptionen</string>
+  <string name="idepref_devOptions_summary">Experimentelle/Debugging Optionen für AndroidIDE</string>
   <string name="idepref_group_debugging">Debugging</string>
-  <string name="idepref_devOptions_dumpLogs_title">Dump logs</string>
-  <string name="idepref_devOptions_dumpLogs_summary">Dump AndroidIDE logs to $HOME/.androidide/logs</string>
+  <string name="idepref_devOptions_dumpLogs_title">Protokolle ausgeben</string>
+  <string name="idepref_devOptions_dumpLogs_summary">AndroidIDE-Logs in $HOME/.androidide/logs ausgeben</string>
 </resources>
