--- a/resources/src/main/res/values-ar/strings.xml
+++ b/resources/src/main/res/values-ar/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
+  <string name="copy" tools:override="true">Copy</string>
+  <string name="text_to_search">Text to search</string>
   <string name="title_open_source_licenses">تراخيص البرامج مفتوحة المصدر</string>
   <string name="msg_about_licensed_under">مرخص له تحت:</string>
   <string name="about_option_email">البريد الإلكتروني</string>
@@ -483,23 +485,23 @@
   <string name="msg_invalid_project_details">تفاصيل المشروع غير صالحة</string>
   <string name="msg_use_kts">استخدام سكريبت كوتلن (.kts) لإنشاء ملفات بناء غرادل</string>
   <string name="title_privacy">الخصوصية</string>
-  <string name="title_androidide_statistics">إحصائيات AndroidIDE</string>
-  <string name="msg_androidide_statistics">Help us improve AndroidIDE by providing anonymous statistics. We collect basic information about your device for user base statistics only. The exact data that is shared can be viewed in preferences. Your data is secure and not shared with third-party services. You can opt-out anytime in preferences.</string>
-  <string name="summary_anonymous_usage_stats">Anonymous usage stats</string>
-  <string name="idepref_stats_optIn_title">Stats collection</string>
-  <string name="idepref_stats_optIn_summary">Allow installation metrics and device statistics to be collected (fully anonymous).</string>
-  <string name="title_unique_id">Unique ID</string>
-  <string name="title_device">Device</string>
-  <string name="title_app_version">App version</string>
-  <string name="title_country">Country</string>
-  <string name="title_cpu_arch">CPU Arch</string>
-  <string name="title_preview_data">Preview data</string>
+  <string name="title_androidide_statistics">إحصائيات التطبيق</string>
+  <string name="msg_androidide_statistics">ساعدنا في تحسين التطبيق مِن خلال توفير إحصائيات مجهولة المصدر. سوف نجمع المعلومات الأساسية حول جهازك لإحصاءات قاعدة المستخدمين فقط. يمكن عرض البيانات الدقيقة التي تتم مشاركتها في التفضيلات. بياناتك آمنة ولا تتم مشاركتها مع خَدَمَات الجهات الخارجية. يمكنك إلغاء الاشتراك في أي وقت في تفضيلاتك.</string>
+  <string name="summary_anonymous_usage_stats">إحصائيات الإستخدام المجهول</string>
+  <string name="idepref_stats_optIn_title">مجموعة الإحصائيات</string>
+  <string name="idepref_stats_optIn_summary">السماح بجمع مقاييس التثبيت وإحصائيات الجهاز (مجهول تماما).</string>
+  <string name="title_unique_id">ايدي ‏مميز</string>
+  <string name="title_device">الجهاز</string>
+  <string name="title_app_version">إصدار التطبيق</string>
+  <string name="title_country">البلد</string>
+  <string name="title_cpu_arch">بناء CPU</string>
+  <string name="title_preview_data">معاينة البيانات</string>
   <string name="title_android_version">Android version</string>
-  <string name="btn_opt_in">Opt-in</string>
-  <string name="btn_no_thanks">No, thanks</string>
-  <string name="title_developer_options">Developer options</string>
-  <string name="idepref_devOptions_summary">Experimental/debugging options for AndroidIDE</string>
-  <string name="idepref_group_debugging">Debugging</string>
-  <string name="idepref_devOptions_dumpLogs_title">Dump logs</string>
-  <string name="idepref_devOptions_dumpLogs_summary">Dump AndroidIDE logs to $HOME/.androidide/logs</string>
+  <string name="btn_opt_in">الاشتراك</string>
+  <string name="btn_no_thanks">لا، شكراً</string>
+  <string name="title_developer_options">خيارات المطور</string>
+  <string name="idepref_devOptions_summary">خيارات تجريبية/تصحيح أخطاء AndroidIDE</string>
+  <string name="idepref_group_debugging">تصحيح الأخطاء</string>
+  <string name="idepref_devOptions_dumpLogs_title">تفريغ السجلات</string>
+  <string name="idepref_devOptions_dumpLogs_summary">تفريغ سجلات AndroidIDE إلى $HOME/.androidide/logs</string>
 </resources>
