--- a/resources/src/main/res/values-es/strings.xml
+++ b/resources/src/main/res/values-es/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
+  <string name="copy" tools:override="true">Copy</string>
+  <string name="text_to_search">Text to search</string>
   <string name="title_open_source_licenses">Licencias de código abierto</string>
   <string name="msg_about_licensed_under">Bajo Licencia: </string>
   <string name="about_option_email">Correo</string>
@@ -494,7 +496,7 @@
   <string name="title_country">Country</string>
   <string name="title_cpu_arch">CPU Arch</string>
   <string name="title_preview_data">Preview data</string>
-  <string name="title_android_version">Android version</string>
+  <string name="title_android_version">Versión de Android</string>
   <string name="btn_opt_in">Opt-in</string>
   <string name="btn_no_thanks">No, thanks</string>
   <string name="title_developer_options">Developer options</string>
