--- a/resources/src/main/res/values-in/strings.xml
+++ b/resources/src/main/res/values-in/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
+  <string name="copy" tools:override="true">Salin</string>
+  <string name="text_to_search">Ketik untuk mencari</string>
   <string name="title_open_source_licenses">Lisensi sumber terbuka</string>
   <string name="msg_about_licensed_under">Berlisensi di bawah: </string>
   <string name="about_option_email">Email</string>
